<resources>
    <string name="app_name">JoinMe</string>
    <string name="unknown_user_key">UNKNOWN</string>
    <string name="title_activity_main">JoinMe</string>
    <string name="title_activity_second">SecondActivity</string>
    <string name="default_web_client_id">72336686371-hd2i4tnr0oh60vmkrrebjkkpj8uif129.apps.googleusercontent.com</string>

...

    <!-- Map Screen -->
    <string name="shared_location_marker_title">Location</string>
    <string name="shared_location_marker_snippet">Shared location</string>

    <!-- Public Profile Screen -->
    <string name="back">Back</string>
    <string name="unknown_error">Unknown error</string>
    <string name="events_joined">Events Joined</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="no_followers_yet">No followers yet</string>
    <string name="not_following_anyone_yet">Not following anyone yet</string>
...
    <string name="online_users_many">%d users online</string>
    <string name="status_online">online</string>
    <string name="status_offline">offline</string>

    <!-- Context Menu -->
    <string name="copy">Copy</string>
    <string name="edit">Edit</string>
    <string name="see_who_read">See who read</string>

    <!-- Events/Series Details Screens -->
    <string name="group_name">Group: %1$s</string>
    <string name="loading">Loading…</string>

    <!-- Calendar Screen -->
    <string name="calendar">Calendar</string>
    <string name="previous_month">Previous month</string>
    <string name="next_month">Next month</string>
...
    <string name="my_location_button_description">My Location</string>
    <string name="number_of_activities_with_same_location">%1$s activities in this place</string>
    <string name="serie">Serie</string>
    <string name="geo_query">geo:%1$s,%2$s?q=%1$s,%2$s</string>

    <!-- Group button -->
    <string name="delete_group_button">DELETE GROUP</string>
    <string name="edit_group_button">EDIT GROUP</string>
    <string name="share_group_button">SHARE GROUP </string>
    <string name="leave_group_button">LEAVE GROUP</string>
    <string name="create_group_button">CREATE A GROUP</string>
    <string name="more_options">More options</string>

    <!-- Group confirmation dialog -->
    <string name="message_group_deletion">Are you sure you want to delete\nthis group?</string>
    <string name="advertisment_group_deletion">The group will be permanently deleted\nThis action is irreversible</string>
    <string name="message_group_leaving">Are you sure you want to leave\nthis group?</string>
    <string name="confirmation_group_button">Yes</string>
    <string name="negation_group_button">No</string>

    <!-- Group message -->
    <string name="currently_not">You are currently not</string>
    <string name="assigned_to_group">assigned to a group…</string>

    <!-- Activity Group Screen -->
    <string name="group_activities_title">%1$s Activities</string>
    <string name="group_activities_default">Group Activities</string>

    <!-- MainActivity Errors -->
...
    <string name="quit_serie">QUIT SERIE</string>
    <string name="join_serie">JOIN SERIE</string>
    <string name="serie_full">Sorry this serie is full</string>

    <!-- Profile Screen -->
    <string name="no_profile_data">No profile data available</string>
    <string name="profile_title">Profile</string>
    <string name="log_out">LOG OUT</string>
    <string name="log_out_title">Log Out</string>
    <string name="log_out_confirmation">Are you sure you want to log out?</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="date_of_birth">Date of Birth</string>
...
